# clang

./: README.txt
include/clang/Basic/: Attr.td  BuiltinsAMDGPU.def  DiagnosticDriverKinds.td  GpuGridValues.h  TargetInfo.h
include/clang/Driver/: Options.td
lib/Basic/: Cuda.cpp
lib/Basic/Targets/: AMDGPU.cpp  NVPTX.cpp
lib/CodeGen/: BackendUtil.cpp  CGBlocks.cpp  CGBuiltin.cpp  CGCall.cpp  CGDecl.cpp  CGExpr.cpp  CGExprScalar.cpp  CGGPUBuiltin.cpp  CGOpenCLRuntime.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntimeNVPTX.cpp  CGStmtOpenMP.cpp  CGVTables.cpp  CodeGenAction.cpp  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CodeGenTypes.cpp  CodeGenTypes.h  TargetInfo.cpp
lib/Driver/: Action.cpp  Driver.cpp  SanitizerArgs.cpp
lib/Driver/ToolChains/: Clang.cpp  CommonArgs.cpp  CommonArgs.h  Cuda.cpp  Gnu.cpp  HIP.cpp  HIP.h
lib/Frontend/: CompilerInvocation.cpp
lib/Headers/: CMakeLists.txt  cuda_runtime.h
lib/Headers/cuda_open/: __clang_cuda_open_device_functions.h
lib/Headers/hip/: hip_host_runtime_api.h
lib/Sema/: SemaDeclAttr.cpp  SemaStmtAsm.cpp
tools/: CMakeLists.txt
tools/clang-hip/clang-build-select-link/: ClangBuildSelectLink.cpp
